# jamu-platform

./: .gitignore  LICENSE  README.md
data-pipeline/: pyproject.toml
data-pipeline/notebooks/: features.ipynb  ingestion.ipynb
data-pipeline/src/data_pipeline/: config.yml  constants.py
data-pipeline/src/data_pipeline/ingestion/: fetch_kaggle.py  load_metadata.py
data-pipeline/src/data_pipeline/pipelines/: ingestion_pipeline.py  preprocessing_pipeline.py
data-pipeline/src/data_pipeline/preprocessing/: features.py
data-pipeline/src/data_pipeline/utils/: __init__.py  common.py
firmware/: install_firmware.sh  pyproject.toml
firmware/misc/: client.py
firmware/misc/data/: conditions.json  consultation.json
firmware/misc/designs/: flutter.md  milestones.md  screens.md  system.plantuml
firmware/src/: main.py
firmware/src/camera/: camera_server.py
firmware/src/iot/: mqtt_client.py  websocket_server.py
firmware/src/led/: led_control.py
firmware/src/motor/: motor_control.py
firmware/src/networks/: wifi_direct_startup.sh  wpa_supplicant.conf
model-development/: pyproject.toml
model-development/research/: bk.py  odir-5k-parsed.csv  test_data.csv  train.ipynb  train.py  train_data.csv  trials.ipynb  val_data.csv
model-development/research/runs/experiment1/: events.out.tfevents.1739003539.Ismas-MBP.fritz.box.52324.0  events.out.tfevents.1739004737.Ismas-MBP.fritz.box.54459.0  events.out.tfevents.1739004755.Ismas-MBP.fritz.box.54572.0  events.out.tfevents.1739004986.Ismas-MBP.fritz.box.54786.0  events.out.tfevents.1739005002.Ismas-MBP.fritz.box.54804.0  events.out.tfevents.1739005203.Ismas-MBP.fritz.box.54966.0  events.out.tfevents.1739005368.Ismas-MBP.fritz.box.55110.0  events.out.tfevents.1739005411.Ismas-MBP.fritz.box.55170.0  events.out.tfevents.1739006106.Ismas-MBP.fritz.box.55689.0  events.out.tfevents.1739006191.Ismas-MBP.fritz.box.55787.0  events.out.tfevents.1739007873.Ismas-MBP.fritz.box.57357.0  events.out.tfevents.1739008703.Ismas-MBP.fritz.box.58237.0  events.out.tfevents.1739010316.Ismas-MBP.fritz.box.60452.0
model-development/research/trials/: cnn.ipynb  sift.ipynb
model-development/src/model_development/: config.yml  constants.py  label_mapping.json
model-development/src/model_development/core/: datasets.py  training.py
model-development/src/model_development/models/: resnet18.py
model-development/src/model_development/pipelines/: train.py
shared/artifacts/processed/ODIR5K/: metadata.csv
(+12 files in other folders)
